--- a/src/main/resources/public/template/token/tokenInstanceList.html
+++ b/src/main/resources/public/template/token/tokenInstanceList.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
 </head>
 <body>
-<table id="instanceTable">
+<table class="z-table" id="instanceTable">
     <colgroup>
         <col width="5%">
         <col width="20%">
