view 페이지 scrollbar 작업

--- a/src/main/resources/public/template/report/reportTemplate.html
+++ b/src/main/resources/public/template/report/reportTemplate.html
@@ -113,6 +113,8 @@
             })
         }
 
+
+        OverlayScrollbars(document.querySelectorAll('.z-page-content'), { className: 'scrollbar' });
         OverlayScrollbars(document.querySelectorAll('.edit'), {className: 'scrollbar'});
         if (![[${view}]]) {
             OverlayScrollbars(document.querySelectorAll('.textarea-scroll-wrapper'), {
