--- a/src/main/resources/public/template/token/tokenEdit.html
+++ b/src/main/resources/public/template/token/tokenEdit.html
@@ -74,6 +74,17 @@
 
             window.zFormToken = zFormToken;
             window.zFormTokenTab = zFormTokenTab;
+
+            OverlayScrollbars(document.querySelectorAll('.z-textarea'), {
+                className: 'scrollbar',
+                resize: 'vertical',
+                sizeAutoCapable: true,
+                textarea: {
+                    dynHeight: false,
+                    dynWidth: false,
+                    inheritedAttrs: "class"
+                }
+            });
         });
         /*]]>*/
     </script>
