--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -1965,7 +1965,7 @@ select {
   word-wrap: normal;
 }
 
-/* _buttons.scss 
+/* _buttons.scss
  *
  * 적용 규칙  (자세한 건 UX팀 정승녕 팀장님과 협의)
  * (1) 버튼 1개인 경우 : Secondary
@@ -1994,14 +1994,13 @@ select {
   text-decoration: none;
   user-select: none;
   white-space: nowrap;
-  vertical-align: middle;
   overflow: visible;
   cursor: pointer;
   border: 0.0625rem solid transparent;
   border-radius: 0.25rem;
   -webkit-border-radius: 0.25rem;
   -moz-border-radius: 0.25rem;
-  padding: 0.5625rem 0.9375rem;
+  padding: 0.4375rem 0.9375rem;
 }
 .z-button:focus, .z-button:hover,
 .z-button-icon:focus,
@@ -5944,7 +5943,7 @@ body.modal-active {
   bottom: 0;
   left: 0;
   z-index: 5000;
-  background-color: rgba(139, 144, 148, 0.5);
+  background-color: rgba(99, 104, 108, 0.6);
 }
 .modal-wrapper .modal-dialog {
   position: absolute;
@@ -5954,30 +5953,33 @@ body.modal-active {
   width: 26.875rem;
   margin: 0 auto 2em auto;
   background-color: #FFFFFF;
-  border: 0.0625rem solid #CFD5D9;
-  -webkit-box-shadow: 0 0.125rem 0.75rem 0 #ABB0B5;
-  -moz-box-shadow: 0 0.125rem 0.75rem 0 #ABB0B5;
-  box-shadow: 0 0.125rem 0.75rem 0 #ABB0B5;
-  border-radius: 0.0625rem;
-  -webkit-border-radius: 0.0625rem;
-  -moz-border-radius: 0.0625rem;
+  -webkit-box-shadow: 0 0.125rem 0.75rem 0 #63686C;
+  -moz-box-shadow: 0 0.125rem 0.75rem 0 #63686C;
+  box-shadow: 0 0.125rem 0.75rem 0 #63686C;
+  border-radius: 0.25rem;
+  -webkit-border-radius: 0.25rem;
+  -moz-border-radius: 0.25rem;
   z-index: 5000;
 }
 .modal-wrapper .modal-dialog .modal-header {
-  height: 3.375rem;
+  height: 3.875rem;
   font-size: 1.5rem;
   font-weight: 500;
   color: #222529;
-  padding: 1.125rem 0 0 1.25rem;
+  padding: 1.25rem 0 1.25rem 1.25rem;
   text-overflow: ellipsis;
   overflow: hidden;
+  border-bottom: 2px solid #EBF1F5;
+  border-radius: 0.25rem 0.25rem 0 0;
+  -webkit-border-radius: 0.25rem 0.25rem 0 0;
+  -moz-border-radius: 0.25rem 0.25rem 0 0;
 }
 .modal-wrapper .modal-dialog .modal-content {
   overflow: auto;
 }
 .modal-wrapper .modal-dialog .modal-bottom {
   height: 5rem;
-  padding: 0 1.25rem 1.25rem 0;
+  padding: 1.25rem 1.25rem;
 }
 
 .modal-dialog.scheduler-list-modal {
@@ -5985,7 +5987,7 @@ body.modal-active {
   height: 37.5rem;
 }
 .modal-dialog.scheduler-list-modal .modal-content {
-  height: calc(37.5rem - 3.375rem - 5rem);
+  height: calc(37.5rem - 3.875rem - 5rem);
   padding: 1.25rem;
 }
 .modal-dialog.scheduler-list-modal .modal-content .table-set {
@@ -6014,7 +6016,7 @@ body.modal-active {
   height: 44.19rem;
 }
 .modal-dialog.tree .modal-content {
-  height: calc(44.19rem - 3.375rem - 5rem);
+  height: calc(44.19rem - 3.875rem - 5rem);
   padding: 1.125rem 0 0 1.25rem;
 }
 .modal-dialog.tree .modal-content div {
@@ -6031,7 +6033,7 @@ body.modal-active {
   height: 31.25rem;
 }
 .modal-dialog.form-import .modal-content, .modal-dialog.process-import .modal-content {
-  height: calc(31.25rem - 3.375rem - 5rem);
+  height: calc(31.25rem - 3.875rem - 5rem);
   padding: 0.625rem 1.25rem 1.25rem 1.25rem;
 }
 .modal-dialog.form-import .modal-content .field-label, .modal-dialog.process-import .modal-content .field-label {
@@ -6043,7 +6045,7 @@ body.modal-active {
   height: 22.5rem;
 }
 .modal-dialog.form-edit .modal-content, .modal-dialog.process-edit .modal-content {
-  height: calc(22.5rem - 3.375rem - 5rem);
+  height: calc(22.5rem - 3.875rem - 5rem);
   padding: 0.625rem 1.25rem 1.25rem 1.25rem;
 }
 .modal-dialog.form-edit .modal-content .field-label, .modal-dialog.process-edit .modal-content .field-label {
@@ -6055,13 +6057,13 @@ body.modal-active {
   height: 50.63rem;
 }
 .modal-dialog.document-edit .modal-content {
-  height: calc(50.63rem - 3.375rem - 5rem);
+  height: calc(50.63rem - 3.875rem - 5rem);
   padding: 1.25rem;
   overflow: hidden;
 }
 .modal-dialog.document-edit .modal-content .workflow-content {
   width: calc(40rem - 2.5rem);
-  height: calc(50.63rem - 3.375rem - 5rem - 2.5rem);
+  height: calc(50.63rem - 3.875rem - 5rem - 2.5rem);
   padding: 0 1.25rem;
   overflow-y: auto;
 }
@@ -6080,13 +6082,13 @@ body.modal-active {
   height: 42.188rem;
 }
 .modal-dialog.document-display .modal-content {
-  height: calc(42.188rem - 3.375rem - 5rem);
+  height: calc(42.188rem - 3.875rem - 5rem);
   padding: 1.25rem;
   overflow: hidden;
 }
 .modal-dialog.document-display .modal-content .document-display-content {
   width: calc(68rem - 2.5rem);
-  height: calc(42.188rem - 3.375rem - 5rem - 2.5rem);
+  height: calc(42.188rem - 3.875rem - 5rem - 2.5rem);
   padding: 0 1.25rem;
   overflow-y: auto;
 }
@@ -6105,7 +6107,7 @@ body.modal-active {
   height: 53.0625rem;
 }
 .modal-dialog.cmdb-class-attribute-modal .modal-content, .modal-dialog.token-list .modal-content {
-  height: calc(53.0625rem - 3.375rem - 5rem);
+  height: calc(53.0625rem - 3.875rem - 5rem);
   padding: 0.625rem 1.25rem;
 }
 .modal-dialog.cmdb-class-attribute-modal .modal-content .cmdb-class-attribute-list,
@@ -6144,13 +6146,13 @@ body.modal-active {
   height: 53.0625rem;
 }
 .modal-dialog.chart-edit-modal .modal-content {
-  height: calc(53.0625rem - 3.375rem - 5rem);
+  height: calc(53.0625rem - 3.875rem - 5rem);
   padding: 0.625rem 1.25rem 2.5rem 1.25rem;
   overflow: hidden;
 }
 .modal-dialog.chart-edit-modal .modal-content .chart-edit-content {
   width: calc(62.5rem - 2.5rem);
-  height: calc(53.0625rem - 3.375rem - 5rem - 3.125rem);
+  height: calc(53.0625rem - 3.875rem - 5rem - 3.125rem);
   padding: 0 1.25rem;
   overflow-y: auto;
 }
@@ -6322,7 +6324,7 @@ body.modal-active {
   top: 7rem;
 }
 .modal-dialog.z-thumbnail-icon .modal-content {
-  height: calc(45rem - 3.375rem - 5rem);
+  height: calc(45rem - 3.875rem - 5rem);
 }
 .modal-dialog.z-thumbnail-icon .modal-content .z-thumbnail-main {
   padding: 1.375rem;
@@ -6363,7 +6365,7 @@ body.modal-active {
   height: 645px;
 }
 .modal-dialog.z-thumbnail-preview .modal-content {
-  height: calc(645px - 3.375rem - 5rem);
+  height: calc(645px - 3.875rem - 5rem);
   padding: 30px;
 }
 .modal-dialog.z-thumbnail-preview .modal-content .z-thumbnail-preview-image {
