--- a/src/main/resources/public/assets/css/formDesigner.css
+++ b/src/main/resources/public/assets/css/formDesigner.css
@@ -3705,7 +3705,7 @@ select {
   background: transparent;
 }
 .scrollbar > .os-scrollbar > .os-scrollbar-track {
-  background: #FAFAFA;
+  background: #F5F5F5;
   border-radius: 0.5rem;
   -webkit-border-radius: 0.5rem;
   -moz-border-radius: 0.5rem;
@@ -3798,7 +3798,7 @@ select {
   background: transparent;
 }
 .inner-scrollbar > .os-scrollbar > .os-scrollbar-track {
-  background: #FAFAFA;
+  background: #F5F5F5;
   border-radius: 0.5rem;
   -webkit-border-radius: 0.5rem;
   -moz-border-radius: 0.5rem;
@@ -3910,7 +3910,7 @@ select {
   overflow: auto;
 }
 .ql-container .ql-editor::-webkit-scrollbar-track {
-  background-color: #FAFAFA;
+  background-color: #F5F5F5;
   border-radius: 0.5rem;
   -webkit-border-radius: 0.5rem;
   -moz-border-radius: 0.5rem;
@@ -5374,7 +5374,7 @@ body.modal-active {
   font-size: 1.5rem;
   font-weight: 500;
   color: #222529;
-  padding: 1.25rem 0 1.25rem 1.25rem;
+  padding: 1.25rem;
   text-overflow: ellipsis;
   overflow: hidden;
   border-bottom: 2px solid #EBF1F5;
