--- a/src/main/resources/public/assets/css/portal.css
+++ b/src/main/resources/public/assets/css/portal.css
@@ -3479,7 +3479,7 @@ summary:focus {
   background: transparent;
 }
 .scrollbar > .os-scrollbar > .os-scrollbar-track {
-  background: #FAFAFA;
+  background: #F5F5F5;
   border-radius: 0.5rem;
   -webkit-border-radius: 0.5rem;
   -moz-border-radius: 0.5rem;
@@ -3572,7 +3572,7 @@ summary:focus {
   background: transparent;
 }
 .inner-scrollbar > .os-scrollbar > .os-scrollbar-track {
-  background: #FAFAFA;
+  background: #F5F5F5;
   border-radius: 0.5rem;
   -webkit-border-radius: 0.5rem;
   -moz-border-radius: 0.5rem;
@@ -3684,7 +3684,7 @@ summary:focus {
   overflow: auto;
 }
 .ql-container .ql-editor::-webkit-scrollbar-track {
-  background-color: #FAFAFA;
+  background-color: #F5F5F5;
   border-radius: 0.5rem;
   -webkit-border-radius: 0.5rem;
   -moz-border-radius: 0.5rem;
@@ -5074,7 +5074,7 @@ body.modal-active {
   font-size: 1.5rem;
   font-weight: 500;
   color: #222529;
-  padding: 1.25rem 0 1.25rem 1.25rem;
+  padding: 1.25rem;
   text-overflow: ellipsis;
   overflow: hidden;
   border-bottom: 2px solid #EBF1F5;
