--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -3973,7 +3973,7 @@ select {
   background: transparent;
 }
 .scrollbar > .os-scrollbar > .os-scrollbar-track {
-  background: #FAFAFA;
+  background: #F5F5F5;
   border-radius: 0.5rem;
   -webkit-border-radius: 0.5rem;
   -moz-border-radius: 0.5rem;
@@ -4066,7 +4066,7 @@ select {
   background: transparent;
 }
 .inner-scrollbar > .os-scrollbar > .os-scrollbar-track {
-  background: #FAFAFA;
+  background: #F5F5F5;
   border-radius: 0.5rem;
   -webkit-border-radius: 0.5rem;
   -moz-border-radius: 0.5rem;
@@ -4178,7 +4178,7 @@ select {
   overflow: auto;
 }
 .ql-container .ql-editor::-webkit-scrollbar-track {
-  background-color: #FAFAFA;
+  background-color: #F5F5F5;
   border-radius: 0.5rem;
   -webkit-border-radius: 0.5rem;
   -moz-border-radius: 0.5rem;
@@ -5966,7 +5966,7 @@ body.modal-active {
   font-size: 1.5rem;
   font-weight: 500;
   color: #222529;
-  padding: 1.25rem 0 1.25rem 1.25rem;
+  padding: 1.25rem;
   text-overflow: ellipsis;
   overflow: hidden;
   border-bottom: 2px solid #EBF1F5;
@@ -6059,13 +6059,11 @@ body.modal-active {
 .modal-dialog.document-edit .modal-content {
   height: calc(50.63rem - 3.875rem - 5rem);
   padding: 1.25rem;
-  overflow: hidden;
 }
 .modal-dialog.document-edit .modal-content .workflow-content {
   width: calc(40rem - 2.5rem);
   height: calc(50.63rem - 3.875rem - 5rem - 2.5rem);
   padding: 0 1.25rem;
-  overflow-y: auto;
 }
 .modal-dialog.document-edit .modal-content .field-label {
   display: inline-block;
