--- a/src/main/resources/public/scss/template/_modal.scss
+++ b/src/main/resources/public/scss/template/_modal.scss
@@ -38,7 +38,7 @@ body.modal-active {
       font-size: $modal-header-font-size;
       font-weight: $modal-header-font-weight;
       color: $modal-header-font-color;
-      padding: 1.25rem 0 1.25rem 1.25rem; // 20px 0 20px 20px
+      padding: 1.25rem; // 20px
       text-overflow: ellipsis;
       overflow: hidden;
       @include border(2px, solid, $modal-header-border, bottom);
