--- a/src/main/resources/public/template/chart/chartSearch.html
+++ b/src/main/resources/public/template/chart/chartSearch.html
@@ -4,7 +4,7 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layout/itsm/pageType/pagingListLayout}">
 <head>
-    <title th:text="#{chart.label.chartList}"></title>
+    <title th:text="#{chart.label.chart}"></title>
 </head>
 <th:block layout:fragment="pageHead">
     <script th:src="@{/assets/vendors/highCharts/highcharts.js}"></script>
@@ -17,7 +17,7 @@
 </th:block>
 <body>
 <div layout:fragment="pageTitle">
-    <h1 th:text="#{chart.label.chartList}"></h1>
+    <h1 th:text="#{chart.label.chart}"></h1>
     <h6 class="description ml-2 pl-2" th:text="#{chart.msg.searchDescription}"></h6>
 </div>
 <div layout:fragment="pageSearching">
