--- a/src/main/resources/public/template/chart/chartSearch.html
+++ b/src/main/resources/public/template/chart/chartSearch.html
@@ -26,10 +26,12 @@
     <input type="hidden" sec:authorize="!hasAuthority('chart.create') && !hasAuthority('chart.update')"
            th:name="isRole" th:value="false"/>
     <form id="searchFrm">
-        <select id="searchGroupName" name="searchGroupName" class="col-3 mr-2">
+        <select id="searchGroupName" name="searchGroupName" class="col-3">
             <option value="" th:text="#{chart.label.all}" selected></option>
             <option th:each="type:${typeList}" th:value="${type.codeValue}" th:text="${type.codeName}"></option>
         </select>
+        <input type="text" class="z-input i-search col-4 mr-2" id="searchValue" name="searchValue" maxlength="100"
+               th:placeholder="#{chart.label.searchPlaceholder}"/>
         <th:block th:replace="layout/itsm/fragment/totalCountFragment :: totalCountFragment"></th:block>
     </form>
     <div class="ml-auto">
@@ -56,6 +58,8 @@
     const ACTIVITY_GAUGE_CHART = 'chart.activityGauge';
 
     window.onload = function () {
+        document.getElementById('searchValue').focus();
+        document.getElementById('searchValue').addEventListener('keyup', function() { getList(); });
         document.getElementById('searchGroupName').addEventListener('change', function () {
             getList();
         });
