#11515 모달 디자인 정리 - 스케줄러 이력 모달

--- a/src/main/resources/public/assets/css/document.css
+++ b/src/main/resources/public/assets/css/document.css
@@ -2479,6 +2479,9 @@ body.modal-active {
 .tagify.z-input > .tagify__input:not(:first-child) {
   padding: 0.25rem;
 }
+.tagify.z-input > .tagify__input {
+  display: block;
+}
 .tagify.z-input .tagify__tag__removeBtn {
   display: inherit;
 }
