--- a/src/main/resources/public/scss/template/mixins/_layout.scss
+++ b/src/main/resources/public/scss/template/mixins/_layout.scss
@@ -34,6 +34,7 @@
       font-weight: $view-sub-title-font-weight;
       color: $view-sub-title-font-color;
       padding: 0 1.25rem; // 0 20px
+      line-height: 1.5;
     }
     // 내용
     &-content {
