--- a/src/main/resources/public/template/user/user.html
+++ b/src/main/resources/public/template/user/user.html
@@ -65,7 +65,7 @@
                         <div class="flex-row z-input-button">
                             <input id="departmentCode" name="departmentCode" th:value="${deptCodeDetail?.code}"
                                    type="hidden"/>
-                            <input class="z-input col-5" id="department" name="department" readonly
+                            <input class="z-input" id="department" name="department" readonly
                                    th:value="${deptCodeDetail?.codeValue}" type="text">
                             <span class="z-icon i-clear" name="clearIcon" onclick="aliceJs.clearText(this);"
                                   tabindex="-1" th:if="!${view}"></span>
