--- a/src/main/resources/public/scss/theme/default/_layout.scss
+++ b/src/main/resources/public/scss/theme/default/_layout.scss
@@ -245,7 +245,7 @@
 // 신청서
 // 대시보드
 .z-document-content {
-  padding: 1.875rem 0.9375rem 0 3.75rem; //30px 15px 0 60px
+  padding: 0 0.9375rem 0 3.75rem; // 0 15px 0 60px
   background-color: $card-content-bg-color;
 
   .document-column {
@@ -286,7 +286,7 @@
 
 .z-token-content,
 .z-dashboard-content {
-  padding: 1.875rem 1.875rem 0 3.75rem; // 30px 30px 0 60px
+  padding: 0 1.875rem 0 3.75rem; // 0 30px 0 60px
   background-color: $card-content-bg-color;
 }
 
@@ -361,7 +361,7 @@
 }
 // 업무흐름 관리 > 이미지 관리
 .z-image-content-edit {
-  padding: 3.125rem 3.75rem; // 50px 60px
+  padding: 0 3.75rem; // 0 60px
   background-color: $edit-content-bg-color;
 }
 // 업무흐름 관리 > 커스텀 코드
