#11410 - [로그인] - 사용자 패스워드 알림 메일 디자인
코드 수정 후 MR요청

--- a/src/main/resources/public/template/certification/emailTemplate.html
+++ b/src/main/resources/public/template/certification/emailTemplate.html
@@ -41,7 +41,9 @@
 	    <div class="email-contents">
 	        <pre class="intro" th:text="${intro}"></pre>
 	        <pre class="message" th:text="${message}"></pre>
+			<th:block th:if="${not #strings.isEmpty(text)}">
 	        <a class="certificate-link" th:href="${link}" th:text="${text}"></a>
+			</th:block>
 	    </div>
 	</div>
 </body>
