#11560 [폼디자이너]Text Area/CI 조회 모달에서 스크롤발생시 스크롤 디자인이 안된채로 나온다.

--- a/src/main/resources/public/scss/template/_scrollbars.scss
+++ b/src/main/resources/public/scss/template/_scrollbars.scss
@@ -119,6 +119,11 @@
 // textarea scrollbar
 .textarea-scroll-wrapper {
   display: block;
+  &.scrollbar {
+    >.os-scrollbar-vertical {
+      bottom: 0;
+    }
+  }
 }
 // element 내부 scrollbar
 .inner-scrollbar {
