--- a/src/main/resources/public/assets/css/portal.css
+++ b/src/main/resources/public/assets/css/portal.css
@@ -3534,6 +3534,9 @@ summary:focus {
 .textarea-scroll-wrapper {
   display: block;
 }
+.textarea-scroll-wrapper.scrollbar > .os-scrollbar-vertical {
+  bottom: 0;
+}
 
 .inner-scrollbar > .os-scrollbar-horizontal {
   right: 0.625rem;
