--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -4023,6 +4023,9 @@ select {
 .textarea-scroll-wrapper {
   display: block;
 }
+.textarea-scroll-wrapper.scrollbar > .os-scrollbar-vertical {
+  bottom: 0;
+}
 
 .inner-scrollbar > .os-scrollbar-horizontal {
   right: 0.625rem;
