--- a/src/main/resources/public/template/token/tokenPrint.html
+++ b/src/main/resources/public/template/token/tokenPrint.html
@@ -1,14 +1,10 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
-        xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
-        layout:decorator="formDesigner/formCore">
+      xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
+      layout:decorator="~{formDesigner/formCore}">
 <head>
     <title th:text="#{token.label.print}"></title>
 </head>
-<th:block layout:fragment="css">
-    <link th:href="@{/assets/css/document.css}" rel="stylesheet"/>
-</th:block>
-<body>
 <th:block layout:fragment="content">
     <div class="z-print">
         <div class="z-print-main-header">
@@ -31,8 +27,8 @@
         </div>
     </div>
 </th:block>
-</body>
-<th:block layout:fragment="script">
+<th:block layout:fragment="pageScript">
+    <link th:href="@{/assets/css/document.css}" rel="stylesheet"/>
     <script type="module">
         /*<![CDATA[*/
         import { zFormToken } from '../../assets/js/document/zFormToken.js';
