--- a/src/main/resources/public/template/token/tokenView.html
+++ b/src/main/resources/public/template/token/tokenView.html
@@ -1,15 +1,10 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
-      layout:decorator="formDesigner/formCore">
+      layout:decorator="~{formDesigner/formCore}">
 <head>
     <title th:text="#{token.label.view}"></title>
 </head>
-<th:block layout:fragment="css">
-    <link th:href="@{/assets/theme/{theme}/css/itsm.css(theme=${#authentication.details.theme})}" rel="stylesheet"/>
-    <link th:href="@{/assets/css/document.css}" rel="stylesheet"/>
-</th:block>
-<body>
 <th:block layout:fragment="content">
     <div class="z-document-container">
         <form id="frm" name="frm">
@@ -32,8 +27,9 @@
         <div class="z-token-properties flex-column" id="documentProperties"></div>
     </div>
 </th:block>
-</body>
-<th:block layout:fragment="script">
+<th:block layout:fragment="pageScript">
+    <link th:href="@{/assets/theme/{theme}/css/itsm.css(theme=${#authentication.details.theme})}" rel="stylesheet"/>
+    <link th:href="@{/assets/css/document.css}" rel="stylesheet"/>
     <script type="module">
         /*<![CDATA[*/
         import { ZSession } from '../../assets/js/lib/zSession.js';
