--- a/src/main/resources/public/scss/document/_form.scss
+++ b/src/main/resources/public/scss/document/_form.scss
@@ -7,6 +7,20 @@ $tooltip-type: (group, row, component);
   }
 }
 
+.z-component {
+  &-tooltip {
+    margin: 0;
+    padding-left: 0;
+    padding-right: 0;
+  }
+  .z-component-label {
+    padding-left: 1rem;
+  }
+  .z-element {
+    padding-right: 1rem;
+  }
+}
+
 .z-group {
   &.accordion {
     .z-group-accordion-checkBox:checked {
