--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -1223,8 +1223,13 @@ input:focus, input:hover, textarea:focus, textarea:hover, select:focus, select:h
   border-radius: 0;
   -webkit-border-radius: 0;
   -moz-border-radius: 0;
-  pointer-events: none;
   cursor: default;
+}
+.z-input:read-only:not(:disabled):not(.tagify):hover, .z-input:read-only:not(:disabled):not(.tagify):focus {
+  border-bottom: 0.0625rem solid #CFD5D9;
+  webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none;
 }
 .z-input:disabled {
   color: #ABB0B5;
@@ -1366,9 +1371,14 @@ input:focus, input:hover, textarea:focus, textarea:hover, select:focus, select:h
   border-radius: 0;
   -webkit-border-radius: 0;
   -moz-border-radius: 0;
-  pointer-events: none;
   cursor: default;
   resize: none;
+}
+.z-textarea:read-only:not(:disabled):not(.os-host-textarea):hover, .z-textarea:read-only:not(:disabled):not(.os-host-textarea):focus {
+  border: 0.0625rem solid #CFD5D9;
+  webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none;
 }
 .z-textarea:disabled {
   color: #ABB0B5;
@@ -1571,8 +1581,20 @@ select {
   border-radius: 0;
   -webkit-border-radius: 0;
   -moz-border-radius: 0;
-  pointer-events: none;
   cursor: default;
+}
+.z-select .z-select-box .z-select-box-label {
+  height: auto;
+  border: none;
+  width: 100%;
+  padding: 0;
+  vertical-align: unset;
+}
+.z-select .z-select-box .z-select-box-label:hover, .z-select .z-select-box .z-select-box-label:focus {
+  border: none;
+  webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none;
 }
 .z-select .z-select-box.disabled-select {
   color: #ABB0B5;
