--- a/src/main/resources/public/scss/formDesigner/_form.scss
+++ b/src/main/resources/public/scss/formDesigner/_form.scss
@@ -310,7 +310,7 @@
       .z-dr-table-row {
         .z-button-icon { padding: 0; }
 
-        .z-input {
+        .z-input:not(.z-select-box-label) {
           padding: 0.4375rem 0;
           margin: 0.25rem 0;
           text-indent: $element-indent;
