#11409 - [권한] 사용메뉴 목록에 코드값이 나온다.
  * pMenuId값이 'menu' 일때 .parent를 추가하여 값이 정상 출력 되도록 수정

--- a/src/main/resources/public/template/auth/auth.html
+++ b/src/main/resources/public/template/auth/auth.html
@@ -55,7 +55,7 @@
                         <label class="z-checkbox" tabindex="0" th:for="${'auth.'+menu?.menuId}">
                             <input name="authMenu" th:disabled="${view}" th:id="${'auth.'+menu?.menuId}" th:value="${menu?.menuId}" type="checkbox">
                             <span></span>
-                            <span class="z-label" th:text="#{|menu.${menu?.menuId}|}"></span>
+                            <span class="z-label" th:text="${menu.pMenuId == 'menu'} ? #{|menu.${menu.menuId}.parent|} : #{|menu.${menu.menuId}|}"></span>
                         </label>
                     </li>
                 </ul>
